<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2023 Liz Looney

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<resources>
  <string name="app_name">MandlebrotFun</string>
  <string name="Title">Lizzie\'s Fun Mandlebrot Generator</string>

  <string-array name="spinner_choices">
    <item>Pan and Zoom</item>
    <item>Color... Hue</item>
    <item>Color... Saturation</item>
    <item>Color... Value</item>
  </string-array>

  <string name="Back">&lt;</string>
  <string name="ZoomOut">&#x1f50d;-</string>
  <string name="ZoomIn">&#x1f50d;+</string>
  <string name="UpLeft">\u2196</string>
  <string name="Up">\u2191</string>
  <string name="UpRight">\u2197</string>
  <string name="Left">\u2190</string>
  <string name="Right">\u2192</string>
  <string name="DownLeft">\u2199</string>
  <string name="Down">\u2193</string>
  <string name="DownRight">\u2198</string>
  <string name="Start">Start</string>
  <string name="Min">Min</string>
  <string name="Max">Max</string>
  <string name="Delta">Delta</string>
  <string name="Hue">Hue</string>
  <string name="Saturation">Saturation</string>
  <string name="Value">Value</string>
</resources>
